<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".Login_page">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/cardid"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:fontFamily="serif"
        android:gravity="center"
        android:text="@string/quantum"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:textStyle="bold">

    </TextView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:cardCornerRadius="10dp"
        android:background="@color/white"
        android:id="@+id/cardid"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:orientation="vertical">


            <EditText
                android:id="@+id/emailboxid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/design_for_edit_box"
                android:drawablePadding="20dp"
                android:ems="10"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:hint="@string/email_address"
                android:drawableRight="@drawable/email_photo"
                android:inputType="textEmailAddress"
                android:padding="10dp" />

            <EditText
                android:id="@+id/passwordboxid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/design_for_edit_box"
                android:drawablePadding="20dp"
                android:ems="10"
                android:hint="@string/passwordone"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:drawableRight="@drawable/lock_photo"
                android:inputType="textPassword"
                android:padding="10dp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginRight="5dp"
                android:gravity="right"
                android:onClick="forgotpasswordresetlink"
                android:textColor="@color/black"
                android:text="@string/forgot_password" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/loginbuttonid"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@color/teal_700"
                android:textSize="16sp"
                android:text="@string/login"
                android:textColor="@android:color/white" />
            

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/createbuttonid"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:background="@color/teal_200"
                android:textSize="16sp"
                android:text="@string/create_an_account"
                android:textColor="@android:color/white" />


        </LinearLayout>


    </androidx.cardview.widget.CardView>
    <com.facebook.login.widget.LoginButton
        android:id="@+id/facebookid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:text="@string/continue_with_facebook"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_below="@id/cardid"
        android:layout_marginTop="6dp"
        android:background="@color/purple_700"
        android:padding="10dp"/>

</RelativeLayout>