<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Signup_Page"
    android:background="@drawable/background_for_register">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="25sp"
        app:cardCornerRadius="3dp"
        android:layout_margin="15dp"
        android:layout_centerInParent="true">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_centerInParent="true">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_new_account"
                android:textSize="18sp"
                android:id="@+id/textid"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginBottom="18sp"
                android:gravity="center">

            </TextView>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:background="@drawable/design_for_edit_box"
                android:padding="11dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:inputType="text"
                android:id="@+id/nameid"
                android:layout_below="@id/textid"
                android:layout_marginTop="6dp"
                android:maxLines="1"></EditText>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/e_mail"
                android:background="@drawable/design_for_edit_box"
                android:padding="11dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:id="@+id/emailid"
                android:layout_below="@id/nameid"
                android:layout_marginTop="6dp"
                android:inputType="textEmailAddress"
                android:maxLines="1"></EditText>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:background="@drawable/design_for_edit_box"
                android:padding="11dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:id="@+id/passwordid"
                android:layout_marginTop="6dp"
                android:inputType="textPassword"
                android:layout_below="@id/emailid"
                android:maxLines="1"></EditText>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone"
                android:background="@drawable/design_for_edit_box"
                android:padding="11dp"
                android:textStyle="bold"
                android:id="@+id/phoneid"
                android:layout_below="@id/passwordid"
                android:layout_marginTop="6dp"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:inputType="phone"
                android:maxLines="1"></EditText>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="20dp"
                android:layout_below="@id/phoneid"
                android:layout_margin="10dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <androidx.appcompat.widget.AppCompatButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:text="@string/register"
                        android:layout_below="@id/phoneid"
                        android:layout_marginTop="23dp"
                        android:background="@color/black"
                        android:id="@+id/registerbuttonid">

                    </androidx.appcompat.widget.AppCompatButton>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/already_register_login"
                        android:textSize="16sp"
                        android:layout_marginTop="15dp"
                        android:textAlignment="viewEnd"
                        android:textColor="@color/black"
                        android:onClick="alreadyregistertextfield"
                        android:textStyle="bold"></TextView>
                </LinearLayout>
            </androidx.cardview.widget.CardView>


        </RelativeLayout>

    </androidx.cardview.widget.CardView>



</RelativeLayout>